--- a/pjfinal/src/components/Admin.css
+++ b/pjfinal/src/components/Admin.css
@@ -5,7 +5,7 @@
     max-width: 700px;
     width: 100%;
     transform: translateX(-180px);
-    margin-top: 5px;
+    margin-top: 20px;
     margin: 0 auto;
   }
 
@@ -16,4 +16,18 @@
   }
   
 
- 
+.form-container {
+  padding: 10px;
+  margin: 20px;
+  width: 500px;
+  transform: translateX(-5px);
+  border-radius: 20px;
+  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
+  background-color: #f9f9f9;
+  overflow: hidden;
+}
+
+.form-container .btn {
+  width: 60%; 
+  transform: translateX(200px);
+}
