--- a/pjfinal/src/components/URLlist.css
+++ b/pjfinal/src/components/URLlist.css
@@ -4,7 +4,7 @@
   }
 
 
-  .input-container {
-    display: flex;
-    flex-direction: column;
+  pre {
+    font-weight: bold;
+    font-size: 15px;
   }
