--- a/pjfinal/src/components/maindashboard.css
+++ b/pjfinal/src/components/maindashboard.css
@@ -1,7 +1,7 @@
 .mainDash {
     
-  margin: auto;
- 
+  margin-top: 50px;
+ margin-left: 400px;
   text-align:left;
   width:1000px;
   height: 800px;
