--- a/pjfinal/src/components/Dashboard.css
+++ b/pjfinal/src/components/Dashboard.css
@@ -1,11 +1,27 @@
 .dashboard {
     background: #fff;
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 40px;
     width: 400px;
     box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
     margin-bottom: 20px; 
   }
+
+  .dashboard2 {
+    background: #fff;
+    padding: 10px;
+    border-radius: 40px;
+    margin-bottom: 20px; 
+    width: 400px;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+
+    margin-right: 70px; 
+  }
+  .dashboarddd {
+  
+      display: flex;
+      justify-content: space-between;
+    }
 
  .Sum{
     background: #fff;
