Startpage(1)+ New Logo Navbar

--- a/pjfinal/src/components/maindashboard.css
+++ b/pjfinal/src/components/maindashboard.css
@@ -1,7 +1,6 @@
 .mainDash {
     
-  margin-top: 50px;
- margin-left: 400px;
+  margin: auto;
   text-align:left;
   width:1000px;
   height: 800px;
