--- a/pjfinal/src/components/createproject.css
+++ b/pjfinal/src/components/createproject.css
@@ -5,6 +5,7 @@
     align-content: center;
     justify-content: center; 
     width: 500px;
+    height: 500px;
     margin: 100px auto; 
     padding: 20px;
     
