--- a/pjfinal/src/components/Dashboard.css
+++ b/pjfinal/src/components/Dashboard.css
@@ -1,40 +1,55 @@
-.dashboard {
+.dashboard-s1-b1 {
     background: #fff;
     padding: 10px;
-    border-radius: 40px;
-    width: 400px;
-    box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
-    margin-bottom: 20px; 
+    border-radius: 10px;
+    width: 500px;
+    height: 100%;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.07);
+    margin: auto;
   }
-
-  .dashboard2 {
-    background: #fff;
-    padding: 10px;
-    border-radius: 40px;
-    margin-bottom: 20px; 
-    width: 400px;
-    box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
-
-    margin-right: 70px; 
-  }
-  .dashboarddd {
+.dashboard-s1-b1,.dashboard-s1-b2 > h1{
   
-      display: flex;
-      justify-content: space-between;
-    }
+  text-align: center;
+
+}
+  .dashboard-s1-b2 {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    width: 500px;
+    height:100%;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.07);
+    margin: auto;
+
+    
+  }
+  
+.dashboard-s1 {
+
+    display: flex;
+    justify-content:center;
+    height: 520px;
+    /* background-color: #6F77B1; */
+    position: relative;
+  }
+.dashboard-s2 {
+
+    margin-top: 25px;
+    width: 100%;
+    height: max-content;
+    /* background-color: #6F77B1; */
+    position: relative;
+  }
 
  .Sum{
     background: #fff;
     padding: 10px;
-    border-radius: 20px;
-    width: 800px;
-    box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
-    margin-bottom: 20px; 
+    border-radius: 5px;
+    width: 95%;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.07);
+    margin:auto;
   }
-  .dashboard h1{
-    margin-left: 100px;
-
-  }
+  
   
 
   .highlight-container {
@@ -113,131 +128,131 @@ td{
 
  
   }
-  
-  .dashboard-All {
-    display: flex;
-  }
-  
-  .content-container {
-    margin-left: 70px;
-  }
-  .dashboardAll {
-    display: flex;
-    /* background: #fff;
-    padding: 10px;
-    border-radius: 20px;
-    width: 800px;
-    height: 500px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    margin-top: 0px; */
-  }
-  .dashboardAll2 {
-    background: #fff;
-    padding: 10px;
-    border-radius: 20px;
-    width: 750px;
-    height: 350px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    margin-top: 0px;
-     display: flex;
-     justify-content: space-between;
-    
-    
-    
-  }
-  .circle-redd {
-    display: flex;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    margin-right: 10px;
-    background-color: #FF0000;
-
-   
-    
-  }
-  
-
-  .circle-yelloww {
-    display: flex;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    margin-right: 10px;
-    background-color: #FFBB28;
-
-   
-    
-  }
-  .circle-bluee {
-    display: flex;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    margin-right: 10px;
-    background-color: #6F77B1;
-    
-  }
-  .highlightAll-container {
-    display: flex;
-    align-items: center;
-    
-    
-  }
-
-  .highlightAll-container p {
-    margin: 0; 
-    margin-right: 10px; 
-  }
-  .dashboardAll3 {
-    background: #fff;
-    padding: 10px;
-    border-radius: 20px;
-    width: 750px;
-    height: 350px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    margin-top: 0px;
-    margin-left: 50px;
-  }
-  .All{
-    margin-left: 20px;
-  }
-  .dashboardAll4 {
-    background: #fff;
-    padding: 10px;
-    border-radius: 20px;
-    width: 1570px;
-    height: auto; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    margin-top: 20px;
-    margin-left: 0px;
-    display: flex; 
-    flex-direction: column; 
-    overflow-y: auto; 
-  }
-  
-  .dashboardAll h1 {
-    margin: 20; 
-  }
-  
+.content-container {
+  margin-left: 70px;
+}
+.dashboard-All {
+  display: flex;
+}
 
 
-  .dashboard4mini {
-    background: #fff;
+.dashboardAll {
+  display: flex;
+  background: #fff;
+  padding: 10px;
+  border-radius: 20px;
+  width: 800px;
+  height: 500px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  margin-top: 0px; 
+}
+.dashboardAll2 {
+  background: #fff;
+  padding: 10px;
+  border-radius: 20px;
+  width: 750px;
+  height: 350px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-top: 0px;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
-    border-radius: 10px;
-    width: 1530px;
-    height: 50px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
-    margin-left: 0px;
+  
+  
+  
+} */
+.circle-redd {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 10px;
+  background-color: #FF0000;
 
-    
-  }
+  
+  
+}
 
-  .left-content,
+
+.circle-yelloww {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 10px;
+  background-color: #FFBB28;
+
+  
+  
+}
+.circle-bluee {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 10px;
+  background-color: #6F77B1;
+  
+}
+.highlightAll-container {
+  display: flex;
+  align-items: center;
+  
+  
+}
+
+.highlightAll-container p {
+  margin: 0; 
+  margin-right: 10px; 
+}
+.dashboardAll3 {
+  background: #fff;
+  padding: 10px;
+  border-radius: 20px;
+  width: 750px;
+  height: 350px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-top: 0px;
+  margin-left: 50px;
+}
+.All{
+  margin-left: 20px;
+} */
+.dashboardAll4 {
+  background: #fff;
+  padding: 10px;
+  border-radius: 20px;
+  width: 1570px;
+  height: auto; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-top: 20px;
+  margin-left: 0px;
+  display: flex; 
+  flex-direction: column; 
+  overflow-y: auto; 
+}
+
+.dashboardAll h1 {
+  margin: 20; 
+} */
+
+
+
+.dashboard4mini {
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 10px;
+  width: 1530px;
+  height: 50px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  margin-left: 0px;
+
+  
+}
+
+.left-content,
 .right-content {
   display: flex;
 }
