--- a/pjfinal/src/components/projectdash.css
+++ b/pjfinal/src/components/projectdash.css
@@ -1,9 +1,25 @@
-
+.ProjectDash-Head{
+    display: flex;
+    margin-left: 50px;
+    margin-top: 10px;
+}
+.ProjectDash-Head > h2{
+    color: #064061;
+    font-size: 25px;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+.ProjectDash{
+    background-color: #efefef;
+    padding-bottom: 10px;
+}
 .ProjectDashLayout{
-    width: 1000px;
-    height: 1000px;
+    width: 1200px;
+    height: max-content;
     border-radius: 20px;
-    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2); */
     align-items: center;
     align-content: center;
 
