--- a/pjfinal/src/components/Admin.css
+++ b/pjfinal/src/components/Admin.css
@@ -17,9 +17,10 @@
 
 
 .form-container {
+  justify-content: center;
 padding: 10px;
 margin: 20px;
-width: 500px;
+width: 950px;
 transform: translateX(-5px);
 border-radius: 20px;
 box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
