--- a/pjfinal/src/components/startpage.css
+++ b/pjfinal/src/components/startpage.css
@@ -72,13 +72,14 @@
 }
 .fs-2 {
     position: relative;
-    height: 650px /* Ensure the container takes the full height of the parent */
+    height: 650px; /* Ensure the container takes the full height of the parent */
+    /* background-color: #ffffff1b; */
   }
 .fs-2-image {
     width: 100%;
     height: 650px;
     object-fit: cover;
-    opacity: 0.5;
+    opacity: 0.2;
     position: absolute;
     top: 0;
     left: 0;
@@ -89,21 +90,29 @@
     font-optical-sizing: auto;
     width: auto;
     margin-left: 8%;
-    display: flex;
-    
+    display: inline-block;
+    text-shadow: 0px 0px 5px rgb(190, 192, 246);
     z-index: 1;
+    position: absolute;
+    top: 45%;
+    left: 5%;
+    /* transform: translate(-50%, -50%); */
 }
 .fs-2-t2 > h1{
     color: #000;
     font-weight: 800;
-    font-size: 20px;
+    font-size: 30px;
     font-style: normal;
+    text-shadow: 0px 0px 0px 5px rgb(190, 192, 246);
 
 }
 .fs-2-t2-d-i{
-    width: 50px;
-    height: 50px;
+    width: 120px;
+    height: 120px;
     margin-right: 10px;
+    background: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0px 0px 1px 1px rgb(190, 192, 246);
     
 }
 .CButton {
