--- a/pjfinal/src/App.css
+++ b/pjfinal/src/App.css
@@ -3,6 +3,7 @@
 }
 
 .Applayout {
+  margin-top: 50px;
   display: flex;
 }
 
@@ -12,5 +13,7 @@
 }
 
 .Home {
+  margin-right: 20px;
+  margin-top: 50px;
   order: 2; 
 }
