--- a/pjfinal/src/components/Dashboard.css
+++ b/pjfinal/src/components/Dashboard.css
@@ -64,7 +64,21 @@
    
     
   }
+  .heading {
+    margin: 0;
+    margin-left: 580px;
+    font-size: 24px;
+    color: #333; 
+    border: 2px solid #ccc;
+    padding: 10px; 
+    border-radius: 5px; 
+    margin-top: 50px;
+  }
   
+  .total {
+    font-weight: bold;
+    color: #333;
+  }
   .circle-orange {
     display: flex;
     width: 20px;
