--- a/pjfinal/src/components/Register.css
+++ b/pjfinal/src/components/Register.css
@@ -1,5 +1,5 @@
 .loginpage{
-  background-image:url("./imgsrc/artistic-blurry-colorful-wallpaper-background.jpg");
+  /* background-image:url("./imgsrc/artistic-blurry-colorful-wallpaper-background.jpg"); */
   height: auto;
 }
 .navlogin {
