--- a/pjfinal/src/components/Admin.css
+++ b/pjfinal/src/components/Admin.css
@@ -8,13 +8,38 @@
   margin-top: 20px;
   margin: 0 auto;
 }
-
+.Applayout2 {
+  display: flex;
+}
 .select-container {
   margin-top: 20px;
-  width: 500px; 
+  width: 500px;
   transform: translateX(-5px);
 }
 
+.payload {
+  padding: 20px;
+  width: 1400px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+
+.valuepayload {
+  text-align: left;
+}
+
+.valuepayload p {
+  width: 800px;
+  margin-left: 400px;
+  word-break: break-all;
+}
+
+.valuepayload h3 {
+  margin-left: 400px;
+  word-break: break-all;
+}
 
 .form-container {
   justify-content: center;
