--- a/pjfinal/src/components/createproject.css
+++ b/pjfinal/src/components/createproject.css
@@ -1,3 +1,12 @@
+.robonav{
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+.spaceUpCreate{
+    width: auto;
+    height: 150px;
+}
 .container2 {
     display: flex;
     flex-direction: column;
@@ -6,9 +15,9 @@
     justify-content: center; 
     width: 500px;
     height: 600px;
-    margin: 100px auto; 
+    margin: auto; 
     padding: 20px;
-    
+    z-index: -1;
     border-radius: 20px;
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
 
