--- a/pjfinal/src/components/maindashboard.css
+++ b/pjfinal/src/components/maindashboard.css
@@ -5,8 +5,17 @@
   height: max-content;
   
 }
-
-
+/* .spaceUp{
+  width: 1000px;
+  height: 100px;
+} */
+.projcard-extra{
+  display: flex;
+  margin: auto 0px;
+}
+.projcard-extra > Form {
+  margin-right: 15px;
+}
 /* .projcard-inner{
 display: flex;
 
@@ -68,7 +77,7 @@ line-break: anywhere;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: #FF0000;
+  background-color: #c20000;
   margin-left:20px;
   text-align: center;
   color: white;
@@ -98,7 +107,7 @@ line-break: anywhere;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: #6F77B1;
+  background-color: #92e369;
   margin-left:20px;
   color: white;
 }
