--- a/pjfinal/src/components/maindashboard.css
+++ b/pjfinal/src/components/maindashboard.css
@@ -33,7 +33,16 @@ margin-right: auto;
 .projindash{
 margin-bottom: 50px;
 }
+.projcollaspe-extra{
+  display: flex;
+  line-height: 30px;
+  margin: auto;
 
+}
+.projcollaspe-extra > Button{
+  margin-left: 15px ;
+
+}
 .projcollaspe-head {
 display: flex;
 align-items: center;
