--- a/pjfinal/src/components/projectdash.css
+++ b/pjfinal/src/components/projectdash.css
@@ -20,11 +20,11 @@
     padding-bottom: 10px;
 }
 .ProjectDashh{
-    background-color: #ffff;
+    background-color: #efefef;
     padding-bottom: 10px;
 }
 .ProjectDashLayout{
-    width: 1200px;
+    width: 1400px;
     height: max-content;
     border-radius: 20px;
     /* box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2); */
@@ -35,8 +35,8 @@
 }
 
 .ProjectDashLayoutt{
-    width: 1500px;
-    height: 1200px;
+    width: 1400px;
+    height: max-content;
 
     border-radius: 20px;
     /* box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.); */
