--- a/pjfinal/src/components/maindashboard.css
+++ b/pjfinal/src/components/maindashboard.css
@@ -1,8 +1,12 @@
+.projcard{
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.07);
+}
 .mainDash {
   margin: auto;
   text-align:left;
   width:1000px;
   height: max-content;
+  
   
 }
 /* .spaceUp{
@@ -83,40 +87,47 @@ line-break: anywhere;
 }
 .severitybutton-c{
   display: flex;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   background-color: #c20000;
   margin-left:20px;
-  text-align: center;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
   color: white;
   
   
 }
 .severitybutton-h{
   display: flex;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   background-color:#FF5100;
   margin-left:20px;
   color: white;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
 }
 .severitybutton-m{
   display: flex;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   background-color: #FFBB28;
   margin-left:20px;
   color: white;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
 }
 .severitybutton-l{
   display: flex;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   background-color: #92e369;
   margin-left:20px;
   color: white;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
 }
