--- a/pjfinal/src/components/Admin.css
+++ b/pjfinal/src/components/Admin.css
@@ -11,6 +11,7 @@
 .Applayout2 {
   display: flex;
 }
+
 .select-container {
   margin-top: 20px;
   width: 500px;
@@ -20,6 +21,7 @@
 .payload {
   padding: 20px;
   width: 1400px;
+  margin-top: 100px;
   border: 1px solid #ddd;
   border-radius: 5px;
   background-color: #f9f9f9;
