--- a/pjfinal/src/components/createproject.css
+++ b/pjfinal/src/components/createproject.css
@@ -8,7 +8,7 @@
     height: 600px;
     margin: 100px auto; 
     padding: 20px;
-    
+    margin-top: 200px;
     border-radius: 20px;
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
 
